care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Cumulative_Amount_Received_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Amount_Received_This_Month__c</fullName>
    <label>Cumulative Amount Received This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>