care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/FSP_Monthly_Settlement__c.field-meta.xml
<CustomField>
    <fullName>FSP_Monthly_Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSP Monthly Settlement</label>
    <referenceTo>FSP_Monthly_Settlement__c</referenceTo>
    <relationshipLabel>Repayment Schedules</relationshipLabel>
    <relationshipName>Repayment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>