care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Care Loan ID</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Repayment Schedules</relationshipLabel>
    <relationshipName>Repayment_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>