care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Loan_Repayment_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Number__c</fullName>
    <label>Loan Repayment Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>