care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Loan__r.Borrower__r.District__c &amp; &quot; / &quot; &amp; Loan__r.Borrower__r.City__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>