care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Non_performing_loan_options__c.field-meta.xml
<CustomField>
    <fullName>Non_performing_loan_options__c</fullName>
    <description>list of options for FSP to select if loan is underpaid, this then gets communicated to the lenders for that loan.</description>
    <label>Non-performing loan options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loss of income</fullName>
            </value>
            <value>
                <fullName>Personal or family issues</fullName>
            </value>
            <value>
                <fullName>Natural disaster</fullName>
            </value>
            <value>
                <fullName>Unable to reach borrower (MFI issue)</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>