care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Non_performing_loan_options_other__c.field-meta.xml
<CustomField>
    <fullName>Non_performing_loan_options_other__c</fullName>
    <label>Non-performing loan options other</label>
    <type>TextArea</type>
</CustomField>