care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Principal_Repaid__c</fullName>
    <description>Amount paid off during reporting month (principal)</description>
    <label>Principal Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>