care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Underpaid</fullName>
            </value>
            <value>
                <fullName>Overpaid</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <label>Repaid</label>
            </value>
            <value>
                <fullName>Written off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>