care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/fields/Write_Off_Request__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write Off Request</label>
    <type>Checkbox</type>
</CustomField>