care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/validationRules/CareLoanID.validationRule-meta.xml
<ValidationRule>
    <fullName>CareLoanID</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Loan__c)</errorConditionFormula>
    <errorDisplayField>Loan__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>