care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/validationRules/NonperformingLoanOptionsOther.validationRule-meta.xml
<ValidationRule>
    <fullName>NonperformingLoanOptionsOther</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Non_performing_loan_options__c , &quot;Comment&quot;),
  ISBLANK(Non_performing_loan_options_other__c)
)</errorConditionFormula>
    <errorDisplayField>Non_performing_loan_options_other__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>