care-australia-uat/force-app/main/default/objects/Repayment_Schedule__c/listViews/All_repayments.listView-meta.xml
<ListView>
    <fullName>All_repayments</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Due_Date__c</columns>
    <columns>Repayment_Date__c</columns>
    <columns>Principal_Repaid__c</columns>
    <columns>Status__c</columns>
    <columns>Write_Off_Request__c</columns>
    <columns>Amount_Due__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All repayments</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>